--- a/purchase_partner_selectable_option/static/description/index.html
+++ b/purchase_partner_selectable_option/static/description/index.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -392,6 +391,8 @@ ul.auto-toc {
 <li>Go to <strong>Contacts &gt; Contacts</strong></li>
 <li>Create a record and uncheck the “Selectable in purchase orders” box on the Purchase part of the “Sales &amp; Purchases” tab.</li>
 </ol>
+<p>The “Selectable in purchase orders” field is set to True by default. To change this default to False, adjust the system parameter
+‘purchase_partner_selectable_option.default_purchase_selectable’ by setting it to “0”.</p>
 </div>
 <div class="section" id="usage">
 <h1><a class="toc-backref" href="#toc-entry-2">Usage</a></h1>
